Fix visual issues with mobile (#1323)
- Fixes the play screen overlapping the text, it's also neater now
because i used refs for the spacing on mobile. Additionally works on
tablets
- Fixes achievements page going off screen

--- a/client/src/app/main-menu/play-select.module.scss
+++ b/client/src/app/main-menu/play-select.module.scss
@@ -106,7 +106,7 @@
 	}
 }
 
-@media screen and (max-width: 720px) {
+@media (orientation: portrait) {
 	.gameTypesButtons {
 		grid-auto-flow: row;
 		grid-gap: 1.5vh;
